crates/bitnet-testing-scenarios-profile-core/tests/snapshots/snapshot_tests__config_profile_defaults.snap
---
source: crates/bitnet-testing-scenarios-profile-core/tests/snapshot_tests.rs
expression: profile
---
TestConfigProfile {
    max_parallel_tests: 32,
    test_timeout: 300s,
    cache_dir: "tests/cache",
    log_level: "info",
    coverage_threshold: 0.9,
    fixtures: FixtureProfile {
        auto_download: true,
        max_cache_size: 10737418240,
        cleanup_interval: 86400s,
        download_timeout: 300s,
        base_url: None,
    },
    crossval: CrossValidationProfile {
        enabled: false,
        tolerance: ComparisonToleranceProfile {
            min_token_accuracy: 0.999999,
            max_probability_divergence: 1e-6,
            max_performance_regression: 0.1,
            numerical_tolerance: 1e-6,
        },
        cpp_binary_path: None,
        test_cases: [
            "basic_inference",
            "tokenization",
            "model_loading",
        ],
        performance_comparison: true,
        accuracy_comparison: true,
    },
    reporting: ReportingProfile {
        output_dir: "test-reports",
        formats: [
            Html,
            Json,
        ],
        include_artifacts: true,
        generate_coverage: true,
        generate_performance: true,
        upload_reports: false,
    },
}
