crates/bitnet-testing-scenarios-profile-core/tests/snapshots/snapshot_tests__report_format_variants_debug_stable.snap
---
source: crates/bitnet-testing-scenarios-profile-core/tests/snapshot_tests.rs
expression: "{\n    let variants =\n    [ReportFormat::Html, ReportFormat::Json, ReportFormat::Junit,\n    ReportFormat::Markdown, ReportFormat::Csv,];\n    variants.iter().map(|f| format!(\"{:?}\", f)).collect::<Vec<_>>().join(\"\\n\")\n}"
---
Html
Json
Junit
Markdown
Csv
