crates/bitnet-testing-scenarios-profile-core/tests/snapshots/snapshot_tests__reporting_profile_default_formats.snap
---
source: crates/bitnet-testing-scenarios-profile-core/tests/snapshot_tests.rs
expression: "{\n    profile.formats.iter().map(|f|\n    format!(\"{:?}\", f)).collect::<Vec<_>>().join(\",\")\n}"
---
Html,Json
